[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reprfunc"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.7"
classifiers = [
  'Programming Language :: Python :: 3.7',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'voluptuous',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://reprfunc.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/reprfunc'
'Bug Tracker' = 'https://github.com/kalekundert/reprfunc/issues'
'Continuous Integration' = 'https://github.com/kalekundert/reprfunc/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/reprfunc'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
branch = 'release'
version_variable = 'reprfunc.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
